--- a/_app/_posts/note/2018-02-02-dns.md
+++ b/_app/_posts/note/2018-02-02-dns.md
@@ -3,7 +3,7 @@ layout: post
 title: 🌐 DNS 小记
 category: note
 permalink: note/dns/
-tags: notes
+tags: blog_notes
 ---
 
 国内有关现代的 DNS 中文资料少之又少，对 DNS 的了解大都仅限于 A - AAAA 之间，我就在此将这些坑记下吧。
