--- a/_app/_posts/work/2016-10-26-dalcho.md
+++ b/_app/_posts/work/2016-10-26-dalcho.md
@@ -5,15 +5,8 @@ category: work
 permalink: work/dalcho/
 tags: works_community
 last-modified: 201708131504
-scheme-link: "#cb9147"
-scheme-code: "#ecd1a8"
-scheme-hover: "#ecd1a8"
-heading-bg: https://api.ifengge.cn/v1/img/bing/?date=20161105
-heading-bg-color: "#cb9147"
-heading-bg-size: "cover"
-heading-bg-position: "center center"
-heading-bg-repeat: "no-repeat"
-heading-bg-text: "#fff"
+scheme-text: "#4d1800"
+scheme-link: "#4d1800"
 plugin: lightense
 ---
 
