--- a/_app/_posts/work/2018-01-20-passport.md
+++ b/_app/_posts/work/2018-01-20-passport.md
@@ -4,16 +4,12 @@ title: Passport
 category: work
 permalink: work/passport/
 tags: works_personal
-scheme-text: "#000"
-scheme-link: "#009688"
-scheme-bg: "#E0F2F1"
-scheme-hover: "#fff"
+scheme-link: "#f89210"
+scheme-text: "#f89210"
 last-modified: 201801221001
 ---
 
-## The Passport
+Many people are having trouble remembering their various passwords. For security reasons, experts advise us to change passwords frequently, while simple passwords are not recommended. It is too hard to remember all of them, so... Passport was born for this.  
 
-Many people have trouble remembering their various passwords. For security reasons, experts advise us to change passwords frequently. Simple passwords are not recommended too. It is too hard to remember all of them, so... The passport was born for this.  
-
-## What's more
-# [Visit official site](https://ifengge.cn/passport/)
+{: .large}
+# [Visit official site ➡](https://ifengge.cn/passport/)
