chore: color and other minor fixes

--- a/_app/_posts/work/2016-10-26-dalcho.md
+++ b/_app/_posts/work/2016-10-26-dalcho.md
@@ -1,24 +1,36 @@
 ---
 layout: post
-title: Alchemy UI
+title: Dalcho - Another Typecho Theme
 category: work
-permalink: work/alchemy/
+permalink: work/dalcho/
 tags: works_community
-scheme-text: "#307676"
-scheme-link: "#307676"
+scheme-text: "#4d1800"
+scheme-link: "#4d1800"
 plugin: lightense
 ---
 
-Alchemy UI is a self-designed and developed web UI framework. 
+> Dalcho 是一款简洁大气而不失功能的 Typecho 主题  
+> 停更，目前已更新至版本 v1.2
+> Project suspended, with the latest version of v1.2
 
-Alchemy supports Tabs, Layouts, Drawers, Lists, Spinners and other basic or complex web widgets. It can run in pure CSS mode, while it can also run in JavaScript supported mode to acquire more functions like animation, and DOM manipulate. Alchemy also provides basic React JSX interface.
+### 截图和预览
+![Preview](https://img.akacdn.app/dalcho.jpg)
 
-With all abilities above, alchemy has only 25.1 KB size.
+## 安装
+1. 下载主题
+2. 将下载的文件解压，文件夹重命名为 ```Dalcho```，上传到 Typecho ```usr/themes/``` 目录下
+3. 登陆后台，在控制台下拉菜单中点击**外观**
+4. 找到 Dalcho，点击**启用**
+5. 根据需要更新设置外观
 
-## Usage
-From JsDelivr
-```html
-<link href="https://cdn.jsdelivr.net/gh/tearfuldalvik/alchemy@v1.7.0/dist/alchemy.min.css" rel="stylesheet">
-```
+## 下载
+[Download](https://github.com/tearfulDalvik/Dalcho/archive/master.zip) it from GitHub
+{: .download}
+View source at [GitHub](https://github.com/tearfulDalvik/Dalcho/)
+{: .download}
 
-Or find it on [GitHub](https://github.com/tearfulDalvik/Alchemy)
+### License
+
+Copyright © 2016 [Dalvik](https://ifengge.cn/)  
+Open source under [GNU General Public License v3.0](http://www.gnu.org/licenses/gpl-3.0.html) license  
+本项目已经提交到 Github：[传送门](https://github.com/tearfulDalvik/Dalcho/)
