--- a/_app/_posts/work/2018-01-20-passport.md
+++ b/_app/_posts/work/2018-01-20-passport.md
@@ -4,9 +4,9 @@ title: Passport
 category: work
 permalink: work/passport/
 tags: works_personal
-scheme-link: "#f89210"
-scheme-text: "#f89210"
-last-modified: 201801221001
+scheme-link: "#ffda00"
+scheme-text: "#ffffff"
+scheme-bg: "#f89210"
 ---
 
 Many people are having trouble remembering their various passwords. For security reasons, experts advise us to change passwords frequently, while simple passwords are not recommended. It is too hard to remember all of them, so... Passport was born for this.  
