--- a/_app/_posts/work/2021-04-07-alchemy.md
+++ b/_app/_posts/work/2021-04-07-alchemy.md
@@ -1,37 +1,27 @@
 ---
 layout: post
-title: Dalcho - Another Typecho Theme
+title: Alchemy UI
 category: work
-permalink: work/dalcho/
+permalink: work/alchemy/
 tags: works_community
-last-modified: 201708131504
-scheme-text: "#4d1800"
-scheme-link: "#4d1800"
+scheme-text: "#ba7e4b"
+scheme-link: "#ff7a00"
+scheme-bg: "#fefaea"
+scheme-code: "#ba7e4b"
+scheme-list-color: "link"
 plugin: lightense
 ---
 
-> Dalcho 是一款简洁大气而不失功能的 Typecho 主题  
-> 停更，目前已更新至版本 v1.2
-> Project suspended, with the latest version of v1.2
+Alchemy UI is a self-designed and developed web UI framework. 
 
-### 截图和预览
-![Preview](https://img.akacdn.app/dalcho.jpg)
+Alchemy supports Tabs, Layouts, Drawers, Lists, Spinners and other basic or complex web widgets. It can run in pure CSS mode, while it can also run in JavaScript supported mode to acquire more functions like animation, and DOM manipulate. Alchemy also provides basic React JSX interface.
 
-## 安装
-1. 下载主题
-2. 将下载的文件解压，文件夹重命名为 ```Dalcho```，上传到 Typecho ```usr/themes/``` 目录下
-3. 登陆后台，在控制台下拉菜单中点击**外观**
-4. 找到 Dalcho，点击**启用**
-5. 根据需要更新设置外观
+With all abilities above, alchemy has only 25.1 KB size.
 
-## 下载
-[Download](https://github.com/tearfulDalvik/Dalcho/archive/master.zip) it from GitHub
-{: .download}
-View source at [GitHub](https://github.com/tearfulDalvik/Dalcho/)
-{: .download}
+## Usage
+From JsDelivr
+```html
+<link href="https://cdn.jsdelivr.net/gh/tearfuldalvik/alchemy@latest/dist/alchemy.min.css" rel="stylesheet">
+```
 
-### License
-
-Copyright © 2016 [Dalvik](https://ifengge.cn/)  
-Open source under [GNU General Public License v3.0](http://www.gnu.org/licenses/gpl-3.0.html) license  
-本项目已经提交到 Github：[传送门](https://github.com/tearfulDalvik/Dalcho/)
+Or find it on [GitHub](https://github.com/tearfulDalvik/Alchemy)
