feat: use uniformed image cdn domain, changed to cloudfront directly

--- a/_app/_posts/work/2016-10-26-dalcho.md
+++ b/_app/_posts/work/2016-10-26-dalcho.md
@@ -14,7 +14,7 @@ plugin: lightense
 > Project suspended, with the latest version of v1.2
 
 ### 截图和预览
-![Preview](https://img.akacdn.app/dalcho.jpg)
+![Preview]({{ site.file }}/dalcho.jpg)
 
 ## 安装
 1. 下载主题
